<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="OUT" Id="{34e7e6b5-dae5-49d5-beec-62d6ab1eb96d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    (*******************************************************************)
    (* AUSGÄNGE *)
    (*******************************************************************)
    (* Modul *)

    // 170D2
    Q000_ AT %QX0.0 : BOOL; // 
    Q001_ AT %QX0.1 : BOOL; // 
    Q002_ AT %QX0.2 : BOOL; // 
    Q003_ AT %QX0.3 : BOOL; // 
    Q004_ AT %QX0.4 : BOOL; // 
    Q005_ AT %QX0.5 : BOOL; // 
    Q006_ AT %QX0.6 : BOOL; // 
    Q007_ AT %QX0.7 : BOOL; // 

    Q010_Sauger_LN_230_Start AT %QX1.0 : BOOL; // Sauger LN 230 Start
    Q011_                    AT %QX1.1 : BOOL; // 
    Q012_                    AT %QX1.2 : BOOL; // 
    Q013_                    AT %QX1.3 : BOOL; // 
    Q014_                    AT %QX1.4 : BOOL; // 
    Q015_                    AT %QX1.5 : BOOL; // 
    Q016_                    AT %QX1.6 : BOOL; // 
    Q017_                    AT %QX1.7 : BOOL; // 

    // 170D7
    Q020_ST150_ultraschall_start      AT %QX0.0 : BOOL; // Ultraschall 150.20 Start
    Q021_ST150_ultraschall_reset      AT %QX0.1 : BOOL; // Ultraschall 150.20 Reset
    Q022_ST150_ultraschall_data_bit_0 AT %QX0.2 : BOOL; // Ultraschall 150.20 Data HEX1
    Q023_ST150_ultraschall_data_bit_1 AT %QX0.3 : BOOL; // Ultraschall 150.20 Data HEX2
    Q024_ST150_ultraschall_data_bit_2 AT %QX0.4 : BOOL; // Ultraschall 150.20 Data HEX4
    Q025_ST150_ultraschall_data_bit_3 AT %QX0.5 : BOOL; // Ultraschall 150.20 Data HEX8
    Q026_ST170_rfid_test_links        AT %QX0.6 : BOOL; // RFID Test links 170.20
    Q027_ST170_rfid_test_rechts       AT %QX0.7 : BOOL; // RFID Test rechts 170.21

    Q030_ST155_ultraschall_start      AT %QX1.0 : BOOL; // Ultraschall 155.20 Start    
    Q031_ST155_ultraschall_reset      AT %QX1.1 : BOOL; // Ultraschall 155.20 Reset    
    Q032_ST155_ultraschall_data_bit_0 AT %QX1.2 : BOOL; // Ultraschall 155.20 Data HEX1
    Q033_ST155_ultraschall_data_bit_1 AT %QX1.3 : BOOL; // Ultraschall 155.20 Data HEX2
    Q034_ST155_ultraschall_data_bit_2 AT %QX1.4 : BOOL; // Ultraschall 155.20 Data HEX4
    Q035_ST155_ultraschall_data_bit_3 AT %QX1.5 : BOOL; // Ultraschall 155.20 Data HEX8
    Q036_                             AT %QX1.6 : BOOL; // 
    Q037_                             AT %QX1.7 : BOOL; // 

    // 171D2
    Q040_ AT %QX0.0 : BOOL; // 
    Q041_ AT %QX0.1 : BOOL; // 
    Q042_ AT %QX0.2 : BOOL; // 
    Q043_ AT %QX0.3 : BOOL; // 
    Q044_ AT %QX0.4 : BOOL; // 
    Q045_ AT %QX0.5 : BOOL; // 
    Q046_ AT %QX0.6 : BOOL; // 
    Q047_ AT %QX0.7 : BOOL; // 

    Q050_ AT %QX1.0 : BOOL; // 
    Q051_ AT %QX1.1 : BOOL; // 
    Q052_ AT %QX1.2 : BOOL; // 
    Q053_ AT %QX1.3 : BOOL; // 
    Q054_ AT %QX1.4 : BOOL; // 
    Q055_ AT %QX1.5 : BOOL; // 
    Q056_ AT %QX1.6 : BOOL; // 
    Q057_ AT %QX1.7 : BOOL; // 

END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>